dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/MathMLObject.cc)

MATHVIEW_MAJOR_VERSION=0
MATHVIEW_MINOR_VERSION=2
MATHVIEW_MICRO_VERSION=2
MATHVIEW_VERSION=$MATHVIEW_MAJOR_VERSION.$MATHVIEW_MINOR_VERSION.$MATHVIEW_MICRO_VERSION
MATHVIEW_VERSION_INFO=`expr $MATHVIEW_MAJOR_VERSION + $MATHVIEW_MINOR_VERSION`:$MATHVIEW_MICRO_VERSION:$MATHVIEW_MINOR_VERSION

AC_SUBST(MATHVIEW_VERSION)
AC_SUBST(MATHVIEW_VERSION_INFO)

AC_ARG_ENABLE(
	checks,
	[  --enable-checks[=ARG]   include debugging checks [default=yes]],
	[
		if test $enableval = yes; then
			AC_DEFINE(ENABLE_CHECKS)
		fi
	],
	AC_DEFINE(ENABLE_CHECKS)
)

AC_ARG_ENABLE(
	floating,
	[  --enable-floating[=ARG] use floating point arithmentics for internal
                          computations [default=yes]],
	[
		if test $enableval = yes; then
			AC_DEFINE(FLOATING_SCALED)
		fi
	],
	AC_DEFINE(FLOATING_SCALED)
)

AC_ARG_WITH(
	t1lib,
	[  --with-t1lib[=ARG]      compile with t1lib 1.x library [default=auto]],
	t1lib=$withval,
	t1lib=auto
)

AC_ARG_ENABLE(
	export-PS,
	[  --enable-export-PS[=ARG] enable support for exporting PostScript [default=auto]],
	export_PS=$enableval,
	export_PS=auto
)

dnl Aumomake configuration
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gtkmathview, $MATHVIEW_VERSION)
dnl AC_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_LANG_C
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_ISC_POSIX
AC_CHECK_PROG(HAVE_PFB2PFA, pfb2pfa, yes, no)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADER(wctype.h,,AC_MSG_ERROR(could not find required header file `wctype.h'))
AC_CHECK_HEADER(iconv.h,,AC_MSG_ERROR(could not find required header file `iconv.h'))
AC_CHECK_HEADERS(unistd.h)
AC_FUNC_VFORK

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_TYPE_PID_T

dnl Check for iconv with const pointer as second argument
AC_LANG_C
AC_LANG_CPLUSPLUS
AC_MSG_CHECKING(whether iconv has a const argument)
AC_TRY_COMPILE(
	[#include <iconv.h>],
	[
		const char* inbuf;
		iconv_t     cd;
		iconv(cd, &inbuf, 0, 0, 0);
	],
	[
		AC_DEFINE(ICONV_CONST)
		AC_MSG_RESULT(yes)
	],
	[
		AC_MSG_RESULT(no)
	]
)
AC_LANG_RESTORE

dnl Checks for libraries
AC_CHECK_LIB(minidom, mdom_node_get_type,
	[
		CFLAGS="$CFLAGS `minidom-config --cflags`"
		CXXFLAGS="$CXXFLAGS `minidom-config --cflags`"
		LIBS="$LIBS `minidom-config --libs`"
	],
	AC_MSG_WARN(gtkmathview will not compile if miniDOM is not installed),
	`minidom-config --libs` `glib-config --libs`
)

AC_CHECK_LIB(gtk, gtk_window_new, gtklib="yes", gtklib="no", `gtk-config --libs`)

if test $gtklib = "yes"; then
	CFLAGS="$CFLAGS `gtk-config --cflags`"
	CXXFLAGS="$CXXFLAGS `gtk-config --cflags`"
	LIBS="$LIBS `gtk-config --libs`"
else
	AC_MSG_WARN(GTK is needed in order to use the widget),
fi

if test $t1lib = "auto"; then
	AC_CHECK_LIB(t1, T1_InitLib, t1lib="yes", t1lib="no")
fi

if test $t1lib = "yes"; then
	LIBS="-lt1x -lt1 $LIBS"
	AC_DEFINE(HAVE_LIBT1)
fi

if test "(" $t1lib = "no" ")" -a "(" $export_PS = "yes" ")"; then
	AC_MSG_WARN(cannot export to PostScript if t1lib is not available)
	export_PS=no
fi

if test "(" $export_PS = "auto" ")" -a "(" $HAVE_PFB2PFA = "no" ")"; then
	AC_MSG_WARN(cannot export to PostScript if 'pfb2pfa' is not installed)
	export_PS=no
else
	export_PS=yes
fi

CFLAGS="$CFLAGS -Wall"
CXXFLAGS="$CXXFLAGS -Wall"

AC_OUTPUT([
Makefile
config/Makefile
config/math-engine-configuration.xml
scripts/Makefile
src/Makefile
auto/Makefile
auto/config.dirs
doc/Makefile
viewer/Makefile
randomath/Makefile
mathml2ps/Makefile
])
